# leona-open

./: .env.local-sync.example  .gitignore  AGENTS.md  README.md  roadmap.md
demo-backend/: README.md  canonical_store.go  canonical_store_test.go  go.mod  main.go
docs/: README.md  acceptance-checklist.md  admin-record-2026-04-23.md  alpha-development-plan.md  alpha-emulator-validation-record-2026-04-29.md  alpha-execution-record-2026-04-29.md  alpha-release-notes-template.md  alpha-release-notes.md  alpha-release-prep.md  api-acceptance.md  attestation-record-2026-04-25.md  ci-e2e-setup.md  closeout-strategy.md  current-status.md  demo-flow.md  demo-record-2026-04-23.md  demo-record-template.md  (+31 more)
leona-sdk-android/sdk/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  leona.h
leona-sdk-android/sdk/src/main/cpp/detection/: environment_catalog.h  environment_detector.cpp  environment_detector.h  frida_signatures.cpp  frida_signatures.h  frida_signatures_catalog.h  injection_catalog.h  injection_detector.cpp  injection_detector.h  process_maps.cpp  process_maps.h  root_catalog.h  root_detector.cpp  root_detector.h  tamper_catalog.h  tamper_detector.cpp  tamper_detector.h  timing_probe.cpp  timing_probe.h  unidbg_detector.cpp  unidbg_detector.h  unidbg_heuristics.h  xposed_catalog.h  xposed_detector.cpp  xposed_detector.h
leona-sdk-android/sdk/src/main/cpp/honeypot/: canary.cpp  canary.h  fake_data.cpp  fake_data.h
leona-sdk-android/sdk/src/main/cpp/report/: collector.cpp  collector.h
leona-sdk-android/sdk/src/main/cpp/util/: evidence_builder.cpp  evidence_builder.h
(+315 files in other folders)
